# voz-a-texto

./: .gitignore  AGENTS.md  PLAN.md  README.md  correcciones.md  implementation_plan.md  package-lock.json  package.json  prompt_rediseno_ui.md
backend/: .env.example  package-lock.json  package.json  pyproject.toml
backend/assets/: VoxFlow.desktop  Voz-a-Texto.desktop
backend/scripts/: __init__.py  desktop_app.py  hotkey.py  install_desktop.py  transcribe.py  uninstall_desktop.py
backend/src/: asr-config.js  hotkey-owner.js  hotkey-owner.test.js  server.js
backend/tests/: test_app_config.py  test_asr.py  test_audio_capture.py  test_autostart.py  test_desktop_controller.py  test_desktop_state.py  test_hotkey_service.py  test_installation.py  test_native_typing.py  test_qt_runtime.py  test_transcript_store.py
backend/voz_a_texto/: __init__.py  app_config.py  asr.py  models.py
backend/voz_a_texto/desktop/: app.py  audio_capture.py  autostart.py  controller.py  hotkey_service.py  installation.py  native_typing.py  paths.py  qt_runtime.py  recording_popup.py  settings_window.py  single_instance.py  state.py  theme.py  transcript_store.py  tray.py
docs/: plan-migracion-pyside.md
docs/superpowers/plans/: 2026-03-18-parakeet-v3-local-plan.md  2026-03-19-plan-correccion-falencias.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  audio-worklet.d.ts  audio-worklet.ts  main.tsx  recording-session.d.ts  recording-session.js  recording-session.test.js  styles.css
